--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -16,22 +16,31 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [14.x, 16.x, 18.x]
+        node-version: [18.x]
+        # node-version: [14.x, 16.x, 18.x]
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
     - name: Installing Repository
       uses: actions/checkout@v3
+      
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v3
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
+      
     # npm clean install https://stackoverflow.com/questions/52499617/what-is-the-difference-between-npm-install-and-npm-ci
     - name: Installing dependencies
       run: npm ci
+      
     - name: Building 'Api Colors'
       run: npm run build --if-present
+      
+    - name: Start server
+      run: npm run start &
+    - name: Wait for server to start
+      run: sleep 5
       
     - name: Running Test
       run: npm test
