--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -10,7 +10,7 @@ on:
     branches: [ "main" ]
 
 jobs:
-  build:
+  install-deps:
 
     runs-on: ubuntu-latest
 
@@ -33,14 +33,32 @@ jobs:
     # npm clean install https://stackoverflow.com/questions/52499617/what-is-the-difference-between-npm-install-and-npm-ci
     - name: Installing dependencies
       run: npm ci
-      
+
+    - name: Install Playwright
+      run: npx playwright install --with-deps
+  
+  build:
+    runs-on: ubuntu-latest
+    
+    steps:
     - name: Building 'Api Colors'
       run: npm run build --if-present
       
+  running-test:
+    runs-on: ubuntu-latest
+    
+    steps:
     - name: Start server
       run: npm run start &
     - name: Wait for server to start
-      run: sleep 5
+      run: sleep 6
       
     - name: Running Test
-      run: npm test
+      run: npm run test
+
+    - uses: actions/upload-artifact@v4
+      if: ${{ !cancelled() }}
+      with:
+        name: playwright-report
+        path: playwright-report/
+        retention-days: 30
