--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -38,6 +38,7 @@ jobs:
       run: npx playwright install --with-deps
   
   build:
+    needs: install-deps
     runs-on: ubuntu-latest
     
     steps:
@@ -45,6 +46,7 @@ jobs:
       run: npm run build --if-present
       
   running-test:
+    needs: [install-deps, build]
     runs-on: ubuntu-latest
     
     steps:
@@ -55,7 +57,7 @@ jobs:
       
     - name: Running Test
       run: npm run test
-
+    # Upload test result as artifact
     - uses: actions/upload-artifact@v4
       if: ${{ !cancelled() }}
       with:
