--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -10,14 +10,11 @@ on:
     branches: [ "main" ]
 
 jobs:
-  test:
-
+  build:
     runs-on: ubuntu-latest
-
     strategy:
       matrix:
         node-version: [18.x]
-        # node-version: [14.x, 16.x, 18.x]
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
@@ -34,15 +31,43 @@ jobs:
     # npm clean install https://stackoverflow.com/questions/52499617/what-is-the-difference-between-npm-install-and-npm-ci
     - name: Installing dependencies
       run: npm ci
+    - name: Building 'Api Colors'
+      run: npm run build
+    # path is in 'build' folder
+    - uses: actions/upload-artifact@v4
+      with:
+        name: build
+        path: build
 
+  # Build:
+  test:
+    needs: [build]
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        node-version: [18.x]
+        
+    steps:
+    # Installing deps
+    - name: Installing Repository
+      uses: actions/checkout@v3
+      
+    - name: Use Node.js ${{ matrix.node-version }}
+      uses: actions/setup-node@v3
+      with:
+        node-version: ${{ matrix.node-version }}
+        cache: 'npm'
+        
+    # Install Test deps
     - name: Install Playwright
       run: npx playwright install --with-deps
-  
-  # Build:
-    - name: Building 'Api Colors'
-      run: npm run build --if-present
       
-  # Running-test:
+    # Download previous build
+    - uses: actions/download-artifact@v4
+      with:
+        name: build
+        with: build
+    
     - name: Start server
       run: npm run start &
     - name: Wait for server to start
@@ -56,4 +81,4 @@ jobs:
       with:
         name: playwright-report
         path: playwright-report/
-        retention-days: 30
+        retention-days: 7
