--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -66,7 +66,7 @@ jobs:
     - uses: actions/download-artifact@v4
       with:
         name: build
-        with: build
+        path: build
     
     - name: Start server
       run: npm run start &
